[package]
name = "murmurhash64"
version = "0.3.1"
authors = ["Jan-Erik Rediger <badboy@archlinux.us>"]

keywords = ["hash"]
description = "Implementation of MurmurHash2 (64bit version)"

license = "BSD-3-Clause"
readme = "README.md"

documentation = "http://badboy.github.io/murmurhash64-rs/murmurhash64/"
homepage = "https://github.com/badboy/murmurhash64-rs"
repository = "https://github.com/badboy/murmurhash64-rs"

[dependencies]
rand = "0.3"

[features]
no-hasher = []
